# kd_vp_trees

./: .gitignore  CMakeLists.txt  dataset.csv  extractor.py  main.cpp  normalize.py  pca.py  pca_0.8.csv  pca_0.9.csv  pca_0.95.csv  pca_0.96.csv  pca_0.98.csv  pca_0.99.csv  requirements.txt  setup  stats.py  visual.hpp  vp_defs.hpp  vp_tree.cpp  vp_tree.hpp
KD/: Makefile  images_dataset.csv  main.cpp
common/: funcs.hpp  point.hpp
comp/: CMakeLists.txt  main.cpp  visual.hpp
kd/: CMakeLists.txt  kd_tree.hpp  main.cpp
vp/: CMakeLists.txt  main.cpp  rapidcsv.h  vp_tree.cpp  vp_tree.hpp
